rootskel (1.66) UNRELEASED; urgency=low

  [ Jérémy Bobbio ]
  * Start udev before running init.
    Depends: udev-udeb (>= 0.125-6)

 -- Jérémy Bobbio <lunar@debian.org>  Mon, 25 Aug 2008 18:58:27 +0000

rootskel (1.65) unstable; urgency=low

  [ Colin Watson ]
  * Add debian-installer/exit/poweroff to run poweroff rather than reboot or
    halt at the end of the installation. Requested by Crispin Flowerday.

  [ Martin Michlmayr ]
  * Only set DEBCONF_DROP_TRANSLATIONS=1 if it is not set yet.  This
    allows others (e.g. oldsys-preseed) to set the variable to 0 before
    S70menu is run.

 -- Martin Michlmayr <tbm@cyrius.com>  Sat, 23 Aug 2008 21:38:50 +0300

rootskel (1.64) unstable; urgency=low

  [ Samuel Thibault ]
  * Add basic support for speakup (voice synthesis for accessibility).

  [ Martin Michlmayr ]
  * Add a startup script to change the LED on the HP mv2120 to indicate
    the status of d-i.

  [ Frams Pop ]
  * Stop the udev daemon before unmounting file systems when D-I is shut down.
    Not doing so results in errors with udev 0.124. Closes: #490924.

 -- Frans Pop <fjp@debian.org>  Wed, 16 Jul 2008 13:51:29 +0200

rootskel (1.63) unstable; urgency=low

  [ Joey Hess ]
  * Rename toplevel /floppy mountpoint to /media, as used by the newly
    renamed mountmedia.

  [ Frans Pop ]
  * Apply patch from Samuel Thibault to also expose the theme to the text
    frontend. Closes: #488493.

 -- Joey Hess <joeyh@debian.org>  Mon, 07 Jul 2008 14:03:14 -0400

rootskel (1.62) unstable; urgency=low

  [ Frans Pop ]
  * Remove Bdale Garbee, Kenshi Muto and Matt Kraai as Uploaders with many
    thanks for their past contributions.

  [ Joey Hess ]
  * Fix FTBFS on alpha.

 -- Joey Hess <joeyh@debian.org>  Tue, 22 Apr 2008 21:02:30 -0400

rootskel (1.61) unstable; urgency=low

  [ Frans Pop ]
  * S35term: script is sourced, so remove the shebang.
  * S35framebuffer-linux: export TERM_FRAMEBUFFER so that can be used to test