@@ -2,10 +2,10 @@
 # busybox init configuration for debian-installer
 
 # main rc script
-::sysinit:/bin/cttyhack /sbin/debian-installer-startup
+::sysinit:/sbin/debian-installer-startup
 
 # main setup program
-::respawn:/bin/cttyhack /sbin/debian-installer
+::respawn:/sbin/debian-installer
 
 # convenience shells
 tty2::askfirst:-/bin/sh
