@@ -3,6 +3,9 @@ rootskel (1.66) UNRELEASED; urgency=low
   [ Jérémy Bobbio ]
   * Start udev before running init.
     Depends: udev-udeb (>= 0.125-6)
+  * Rework the switch from /dev/console to the real console device
+    (e.g. /dev/tty0).  (Closes: #484366)
+    Breaks: cdebconf-gtk-udeb (<< 0.134)
 
  -- Jérémy Bobbio <lunar@debian.org>  Mon, 25 Aug 2008 18:58:27 +0000
 
